--- a/1_HTML/exercicio.html
+++ b/1_HTML/exercicio.html
@@ -13,7 +13,7 @@
         <label for="email">E-mail</label>
         <input id="email" type="email" /><br />
         <label for="senha">Senha</label>
-        <input type="password" name="senha" /><br />
+        <input id="senha" type="password" /><br />
         <button type="submit">
             Cadastrar
         </button>
